--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -23,6 +23,14 @@ a {
   background-repeat: no-repeat;
 }
 
+#myvideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
 .index_bg {
   position: fixed;
   top: 50%;
@@ -306,7 +314,7 @@ footer {
   .link_bg {
     position: relative;
     height: 100%;
-    width: calc(50% - ( 17px / 2 ));
+    width: calc(50% - ( 17px / 2));
   }
   .bg_opacity,
   .link_a_bg,
@@ -354,6 +362,7 @@ footer {
     background-color: #fff;
     background-image: none;
   }
+  #myvideo,
   .border_b {
     display: none;
   }
