--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -53,18 +53,14 @@ a {
 
 .link_a_bg {
   background-image: url("../images/left.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center;
-  position: relative;
-  height: 700px;
-  width: 100%;
-  -webkit-transition: background-size 0.2s ease-in;
-  transition: background-size 0.2s ease-in;
 }
 
 .link_b_bg {
   background-image: url("../images/right.png");
+}
+
+.link_a_bg,
+.link_b_bg {
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -176,21 +172,6 @@ a {
   padding-left: 40%;
 }
 
-.link_bg:hover .bg_opacity {
-  opacity: 0.5;
-  background-color: #000000;
-}
-
-.link_bg:hover .link_a_bg {
-  background-size: 120%;
-}
-
-.link_right {
-  background-color: #FFBD52;
-  -webkit-transition: padding-left 0.2s ease-in;
-  transition: padding-left 0.2s ease-in;
-}
-
 .link_bg:hover .link_right {
   padding-left: 40%;
 }
@@ -200,8 +181,18 @@ a {
   background-color: #000000;
 }
 
+.link_bg:hover .link_a_bg {
+  background-size: 120%;
+}
+
 .link_bg:hover .link_b_bg {
   background-size: 120%;
+}
+
+.link_right {
+  background-color: #FFBD52;
+  -webkit-transition: padding-left 0.2s ease-in;
+  transition: padding-left 0.2s ease-in;
 }
 
 .left_top {
@@ -260,12 +251,12 @@ footer {
   }
   .link_a_bg,
   .link_b_bg {
-    background-size: 120%;
+    background-size: 110%;
     background-position: center;
   }
   .link_bg:hover .link_a_bg,
   .link_bg:hover .link_b_bg {
-    background-size: 140%;
+    background-size: 130%;
   }
 }
 
@@ -273,7 +264,7 @@ footer {
   .index_bg {
     padding: 0%;
     width: 90%;
-    height: 94.5vh;
+    height: 89.5vh;
   }
   .special_title {
     font-size: 54px;
@@ -309,7 +300,7 @@ footer {
   }
   .index_right {
     width: 100%;
-    height: calc(100vh - 394px);
+    height: calc(100vh - 446px);
   }
   .link_bg {
     position: relative;
@@ -323,25 +314,21 @@ footer {
     width: 100%;
   }
   .link_a_bg {
-    background-position-y: 20%;
-    background-position-x: 35%;
-    background-size: 233%;
+    background-size: 100%;
     background-image: url("../images/left_03.png");
   }
   .link_b_bg {
-    background-size: 305%;
-    background-position-x: 84%;
-    background-position-y: 0;
-    background-image: url("../images/right_03.jpg");
+    background-size: 100%;
+    background-image: url("../images/right_03.png");
   }
   .link_bg:hover .title_box {
     padding-left: 18px;
   }
   .link_bg:hover .link_a_bg {
-    background-size: 253%;
+    background-size: 120%;
   }
   .link_bg:hover .link_b_bg {
-    background-size: 325%;
+    background-size: 120%;
   }
   .title_box {
     padding: 18px 0px 18px 60px;
@@ -399,18 +386,15 @@ footer {
   }
   .link_a_bg,
   .link_b_bg {
+    background-size: 100%;
     height: 217px;
     width: 100%;
   }
   .link_a_bg {
-    background-position-y: 30%;
-    background-position-x: 0;
-    background-size: 137%;
-    background-image: url("../images/left_03.png");
+    background-image: url("../images/left_04.png");
   }
   .link_b_bg {
-    background-size: cover;
-    background-image: url("../images/right_03.jpg");
+    background-image: url("../images/right_04.png");
   }
   .title_box {
     padding: 10px 0px 10px 32px;
