--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -17,13 +17,19 @@ a {
   width: 100%;
   height: 100vh;
   position: relative;
-  background-image: url("../images/background.png");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 #myvideo {
+  z-index: -19;
+}
+
+.v_color {
+  z-index: -18;
+  background-color: #2B5CD8;
+}
+
+#myvideo,
+.v_color {
   position: fixed;
   right: 0;
   bottom: 0;
