--- a/asset/css/index.scss
+++ b/asset/css/index.scss
@@ -77,7 +77,7 @@ a {
 
 .border_b {
     border-top: 5px solid $blue;
-    margin-bottom: 20px;
+    margin-bottom: 80px;
     margin-top: 300px;
     width: 156px;
 }
@@ -91,6 +91,8 @@ a {
 .special_title{
     font-size: 66px;
     font-weight: bold;
+    line-height: 50px;
+    margin-top: 23px;
 }
 .special_title_2{
     float: left;
@@ -270,7 +272,7 @@ footer {
     .border_b {
         border-top: 20px solid #2B5CD8;
         margin-top: 0;
-        margin-bottom: 80px;
+        margin-bottom: 10vh;
         width: 156px;
     }
     .index_left,
@@ -369,6 +371,8 @@ footer {
     }
     .special_title{
         font-size: 32px;
+        line-height: normal;
+        margin-top: 0;
     }
     .special_second {
         margin-top: 7px;
